--- a/Lab03/index.html
+++ b/Lab03/index.html
@@ -10,6 +10,8 @@
   html, body { margin: 0; padding: 0; height: 100%; }
   #map { min-height: 100%; }
 </style>
+<script src="https://kpflager.github.io/lab03/provinces.js"></script>
+<script src="https://kpflager.github.io/lab03/covidData.js"></script>
     </head>
     <body>
         <div id="map"></div>
@@ -18,16 +20,69 @@
              center: [34.666, 104.9569],
              zoom: 5
          });
-         L.tileLayer('https://stamen-tiles-{s}.a.ssl.fastly.net/toner-lite/{z}/{x}/{y}{r}.{ext}', {
-        attribution: 'Map tiles by <a href="http://stamen.com">Stamen Design</a>, <a
-        href="http://creativecommons.org/licenses/by/3.0">CC BY 3.0</a> &mdash; Map data
+      var imagery = L.tileLayer('https://stamen-tiles-{s}.a.ssl.fastly.net/toner-lite/{z}/{x}/{y}{r}.{ext}', {
+        attribution: 'Map tiles by <a href="http://stamen.com">Stamen Design</a>,
+        <a href="http://creativecommons.org/licenses/by/3.0">CC BY 3.0</a> &mdash; Map data
         &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a>
         contributors',
         subdomains: 'abcd',
         minZoom: 0,
         maxZoom: 20,
         ext: 'png'
-        }).addTo(map);
+        })
+var canvas = L.tileLayer('https://stamen-tiles-{s}.a.ssl.fastly.net/toner/{z}/{x}/{y}{r}.{ext}', {
+attribution: 'Map tiles by <a href="http://stamen.com">Stamen Design</a>, <a
+href="http://creativecommons.org/licenses/by/3.0">CC BY 3.0</a> &mdash; Map data
+&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a>
+contributors',
+subdomains: 'abcd',
+minZoom: 0,
+maxZoom: 20,
+ext: 'png'
+}).addTo(map);
+  function getColor(value) {
+    return value > 50000000 ? '#54278f':
+                      value > 25000000  ? '#756bb1':
+                      value > 10000000  ? '#9e9ac8':
+                      value > 5000000  ? '#cbc9e2':
+                                         '#f2f0f7';
+           }
+           function style(feature){
+                return {
+                    fillColor: getColor(feature.properties.POP10),
+                    weight: 2,
+                    opacity: 1,
+                    color: 'gray',
+                    fillOpacity: 0.9
+                };
+            }
+var provinces = new L.geoJson(provinces,{style:style}).addTo(map);
+var minValue = 100;
+var minRadius = 5;
+function calcRadius(val) {
+ return 0.9 * Math.pow(val/minValue, .7) * minRadius;
+}
+var covidData = new L.geoJson(covidData, {
+  pointToLayer: function(feature, ll){
+        return L.circleMarker(ll, {
+                color: '#000000',
+                opacity: 1,
+                weight: 2,
+                fillColor: '#808080',
+                fillOpacity: .5,
+                //radius: 10
+                radius: calcRadius(feature.properties.covid)
+            });
+        }
+}).addTo(map);
+var basemaps = {
+    "Light Canvas": canvas,
+    "Satellite Imagery": imagery
+};
+var overlaymaps = {
+    "China Provinces ": provinces
+};
+L.control.layers(basemaps, overlaymaps, {collapsed:false}).addTo(map);
                 </script>
            </body>
         </html>
