--- a/Lab03/index.html
+++ b/Lab03/index.html
@@ -8,10 +8,25 @@
         crossorigin=""></script>
         <style type="text/css">
   html, body { margin: 0; padding: 0; height: 100%; }
-  #map { min-height: 100%; }
+   #map { min-height: 100%; }
+            .legend {
+              padding: 6px 8px;
+              line-height: 18px;
+              background: rgba(255,255,255,0.9);
+              box-shadow: 0 0 15px rgba(0,0,0,0.2);
+              border-radius: 18px;
+          }
+
+           .legend i {
+              width: 18px;
+              height: 18px;
+              float: left;
+              margin-right: 8px;
+              opacity: 1.5;
+          }
 </style>
-<script src="https://kpflager.github.io/lab03/provinces.js"></script>
-<script src="https://kpflager.github.io/lab03/covidData.js"></script>
+<script src="https://electionmaps.github.io/provinces.js"></script>
+<script src="https://kpflager.github.io/Lab03/covidData.js"></script>
     </head>
     <body>
         <div id="map"></div>
@@ -21,25 +36,20 @@
              zoom: 5
          });
       var imagery = L.tileLayer('https://stamen-tiles-{s}.a.ssl.fastly.net/toner-lite/{z}/{x}/{y}{r}.{ext}', {
-        attribution: 'Map tiles by <a href="http://stamen.com">Stamen Design</a>,
-        <a href="http://creativecommons.org/licenses/by/3.0">CC BY 3.0</a> &mdash; Map data
-        &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a>
-        contributors',
-        subdomains: 'abcd',
-        minZoom: 0,
-        maxZoom: 20,
-        ext: 'png'
-        })
+	attribution: 'Map tiles by <a href="http://stamen.com">Stamen Design</a>, <a href="http://creativecommons.org/licenses/by/3.0">CC BY 3.0</a> &mdash; Map data &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors',
+	subdomains: 'abcd',
+	minZoom: 0,
+	maxZoom: 20,
+	ext: 'png'
+});
 var canvas = L.tileLayer('https://stamen-tiles-{s}.a.ssl.fastly.net/toner/{z}/{x}/{y}{r}.{ext}', {
-attribution: 'Map tiles by <a href="http://stamen.com">Stamen Design</a>, <a
-href="http://creativecommons.org/licenses/by/3.0">CC BY 3.0</a> &mdash; Map data
-&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a>
-contributors',
-subdomains: 'abcd',
-minZoom: 0,
-maxZoom: 20,
-ext: 'png'
+	attribution: 'Map tiles by <a href="http://stamen.com">Stamen Design</a>, <a href="http://creativecommons.org/licenses/by/3.0">CC BY 3.0</a> &mdash; Map data &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors',
+	subdomains: 'abcd',
+	minZoom: 0,
+	maxZoom: 20,
+	ext: 'png'
 }).addTo(map);
+
   function getColor(value) {
     return value > 50000000 ? '#54278f':
                       value > 25000000  ? '#756bb1':
@@ -56,19 +66,28 @@ ext: 'png'
                     fillOpacity: 0.9
                 };
             }
-var provinces = new L.geoJson(provinces,{style:style}).addTo(map);
+var provinces = new L.geoJson(provinces, {style:style}).addTo(map);
 var minValue = 100;
 var minRadius = 5;
 function calcRadius(val) {
  return 0.9 * Math.pow(val/minValue, .7) * minRadius;
 }
+var onEachFeature = function(feature, layer) {
+        if (feature.properties) {
+          var prop = feature.properties;
+          var popup = '<h3>'+prop['Location']+'</h3>'+'<br>Cases Day 1: '+prop['1']+'<br>Cases Day 16: '+prop['covid'];
+feature.layer = layer;
+         layer.bindPopup(popup, {maxWidth: "auto"});
+       }
+     };
 var covidData = new L.geoJson(covidData, {
+  onEachFeature : onEachFeature,
   pointToLayer: function(feature, ll){
         return L.circleMarker(ll, {
                 color: '#000000',
                 opacity: 1,
                 weight: 2,
-                fillColor: '#808080',
+                fillColor: 'red',
                 fillOpacity: .5,
                 //radius: 10
                 radius: calcRadius(feature.properties.covid)
@@ -83,6 +102,29 @@ var overlaymaps = {
     "China Provinces ": provinces
 };
 L.control.layers(basemaps, overlaymaps, {collapsed:false}).addTo(map);
+var legend = L.control({position: 'bottomleft'});
+    legend.onAdd = function (map) {
+      var div = L.DomUtil.create('div', 'legend'),
+        grades = [5000000, 10000000, 25000000, 50000000];
+         div.innerHTML = '<b>Population 2019 <br><br></b>';
+        for (var i = 0; i < grades.length; i++) {
+        div.innerHTML +=
+        '<i style="background:' + getColor(grades[i] + 1) + '"></i>' +
+          grades[i] + (grades[i + 1] ? '&ndash;' + grades[i + 1] +   '<br><br>' : '+');
+                  }
+                  return div;
+              };
+            legend.addTo(map);
+            map.on('overlayremove', function(eventLayer){
+              if (eventLayer.name == 'provinces'){
+                map.removeControl(legend);
+              }
+            });
+            map.on('overlayadd', function(eventLayer){
+              if (eventLayer.name == 'provinces'){
+                legend.addTo(map);
+              }
+            });
                 </script>
            </body>
         </html>
