--- a/FinalProject/index.html
+++ b/FinalProject/index.html
@@ -1,1 +1,91 @@
 
+<!DOCTYPE html>
+<html>
+   <head>
+    <title>Lab 8 | D3</title>
+    <script src="https://d3js.org/d3.v5.min.js" charset="utf-8"></script>
+    <script src="https://kpflager.github.io/FinalProject/counties.js"></script>
+    <script src="https://kpflager.github.io/FinalProject/landsales.js"></script>
+    <style>
+body {
+    position: absolute;
+    font-family: "Proxima Nova", "Montserrat", sans-serif;
+}
+h1, h2 {
+    position: absolute;
+background: white;
+    left: 10px;
+    font-size: 1.3em;
+    font-weight: 100;
+}
+h2 {
+    top: 30px;
+    font-size: 1em;
+}
+.hover {
+    fill: yellow;
+}
+</style>
+   </head>
+    <body>
+      <h1>Land Sales in Lancaster Count 1880</h1>
+    <h2></h2>
+<script>
+//we will be putting our D3 code here within body script tags
+
+  var width = 1000;
+  var height = 600;
+  var svg = d3.select( "body" )
+  .append( "svg" )
+  .attr( "width", width )
+  .attr( "height", height );
+var g = svg.append( "g" );
+var lowColor = '#bc2a66'
+var highColor = '#f9f9f9'
+
+var minVal = 1
+var maxVal = 1600
+var ramp = d3.scaleLinear().domain([minVal,maxVal]).range([lowColor,highColor]);
+
+
+var albersProjection = d3.geoAlbers()
+    .scale( 40000 )
+    .rotate( [96.6327,0] )
+    .center( [0, 40.8497493] )
+    .translate( [width/2,height/2] );
+
+var geoPath = d3.geoPath()
+    .projection( albersProjection );
+
+    //select element; bind data; append attributes; apply
+g.selectAll( "path" )
+    .data( counties.features )
+    .enter()
+    .append( "path" )
+    .attr( "fill", "#ccc" )
+    .attr( "stroke", "#333")
+    .attr( "d", geoPath );
+
+    var landsales = svg.append( "g" );
+landsales.selectAll( "path" )
+.data( landsales.features )
+.enter()
+.append( "path" )
+.attr ( "fill", function(d) { return ramp(d.properties.Id) })
+.attr( "stroke", "#999" )
+.attr( "d", geoPath )
+.attr("Id","Id")
+.on("mouseover", function(d){
+//populate h2 with "built in" & the year built field from the json
+d3.select("h2").text("Total Acres " + d.properties.Id);
+d3.select(this).attr("properties","properties hover");
+})
+//here, D3 to replace text interactively based on building data
+.on("mouseout", function(d){
+d3.select("h2").text("");
+d3.select(this).attr("properties","NO_ACRES");
+});
+</script>
+</script>
+   </body>
+</html>
