--- a/FinalProject/index.html
+++ b/FinalProject/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
    <head>
-    <title>FinalProject | D3</title>
+    <title> Landsales Lancaster County 1880</title>
     <script src="https://d3js.org/d3.v5.min.js" charset="utf-8"></script>
     <script src="https://kpflager.github.io/FinalProject/counties.js"></script>
     <script src="https://kpflager.github.io/FinalProject/landsales.js"></script>
+    <script src="https://d3js.org/topojson.v1.min.js"></script>
+    <script src="https://d3js.org/d3-geo-projection.v1.min.js"></script>
     <style>
 body {
     position: absolute;
@@ -33,7 +35,7 @@ h2 {
 //we will be putting our D3 code here within body script tags
 
   var width = 1000;
-  var height = 600;
+  var height = 800;
   var svg = d3.select( "body" )
   .append( "svg" )
   .attr( "width", width )
@@ -48,13 +50,39 @@ var ramp = d3.scaleLinear().domain([minVal,maxVal]).range([lowColor,highColor]);
 
 
 var albersProjection = d3.geoAlbers()
-    .scale( 47000 )
+    .scale( 55000 )
     .rotate( [96.6327,0] )
     .center( [0, 40.8497493] )
     .translate( [width/2,height/2] );
 
 var geoPath = d3.geoPath()
     .projection( albersProjection );
+
+    d3.select("svg").on("click",toggle);
+
+    ////////// Alternate between the two layers
+    var detailed = false;
+    function toggle() {
+    	var source;
+    	g.selectAll("path").remove();
+
+    	detailed = !detailed;
+
+    	if (detailed) {
+    		source = "countries";
+    	}
+    	else {
+    		source = "countries2";
+    	}
+
+    	d3.json(source + ".json", function(error, world) {
+    	var paths = g.selectAll("path")
+    		.data(topojson.feature(world, world.objects[source]).features)
+    		.enter().append("path")
+    		.attr("d", path)
+    	});
+
+    }
 
     //select element; bind data; append attributes; apply
 g.selectAll( "path" )
@@ -83,7 +111,11 @@ d3.select(this).attr("properties","properties hover");
 .on("mouseout", function(d){
 d3.select("h2").text("");
 d3.select(this).attr("properties","NO_ACRES");
+
 });
+
+
+
 </script>
 </script>
    </body>
