--- a/lab05/index.html
+++ b/lab05/index.html
@@ -82,6 +82,6 @@
         timelineControl.addTimelines(timeline);
       }
     </script>
-<script src="https://hbloom3.github.io/lab3alt/statepolls817.jsonp"></script>
+<script src="https://kpflager.github.io/lab05/statepolls817.jsonp"></script>
   </body>
 </html>
