--- a/lab05/index.html
+++ b/lab05/index.html
@@ -35,7 +35,7 @@
                 return value >= 5 ? '#2166ac':
                        value >= 3 ? '#67a9cf':
                        value >= 1 ? 'd1e5f0':
-                       value >= 0  ? '#f7f7f7':
+                       value >= 0  ? '#b676f2':
                     value >= -1  ? '#fddbc7':
                     value >= -3  ? '#ef8a62':
 		 value >= -5  ? '#b2182b':
